--- a/backend/api/blog/models/blog.settings.json
+++ b/backend/api/blog/models/blog.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "blogs",
   "info": {
-    "name": "Blog"
+    "name": "Blog",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -32,11 +33,25 @@
     },
     "Likes": {
       "type": "integer",
-      "default": 0
+      "default": 0,
+      "min": 0
     },
     "Views": {
       "type": "integer",
       "default": 0
+    },
+    "isLiked": {
+      "type": "boolean",
+      "default": false
+    },
+    "UserId": {
+      "type": "integer"
+    },
+    "users_permissions_user": {
+      "columnName": "Users",
+      "plugin": "users-permissions",
+      "model": "user",
+      "via": "blogs"
     }
   }
 }
