--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -58,6 +58,10 @@
       "via": "users",
       "plugin": "users-permissions",
       "configurable": false
+    },
+    "blogs": {
+      "via": "likedUser",
+      "collection": "blog"
     }
   }
 }
