Create page without file hadling

--- a/backend/api/blog/models/blog.settings.json
+++ b/backend/api/blog/models/blog.settings.json
@@ -40,6 +40,16 @@
       "collection": "user",
       "via": "blogs",
       "dominant": true
+    },
+    "Author": {
+      "plugin": "users-permissions",
+      "model": "user",
+      "via": "blog"
+    },
+    "blogCategories": {
+      "collection": "blog-category",
+      "via": "blogs",
+      "dominant": true
     }
   }
 }
