--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -62,6 +62,10 @@
     "blogs": {
       "via": "likedUser",
       "collection": "blog"
+    },
+    "blog": {
+      "via": "Author",
+      "collection": "blog"
     }
   }
 }
