Blog Details page completed

--- a/backend/api/blog/models/blog.settings.json
+++ b/backend/api/blog/models/blog.settings.json
@@ -50,6 +50,10 @@
       "collection": "blog-category",
       "via": "blogs",
       "dominant": true
+    },
+    "comments": {
+      "via": "blog",
+      "collection": "comment"
     }
   }
 }
