--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -66,6 +66,10 @@
     "blog": {
       "via": "Author",
       "collection": "blog"
+    },
+    "comments": {
+      "via": "commentedUser",
+      "collection": "comment"
     }
   }
 }
