--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-upload-client": "^16.0.0",
     "graphql": "^15.6.1",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-markdown": "^7.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
     "web-vitals": "^1.1.2"
