--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "apollo-upload-client": "^16.0.0",
     "graphql": "^15.6.1",
     "jquery": "^3.6.0",
+    "markdown-it": "^12.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-markdown": "^7.1.0",
+    "react-markdown-editor-lite": "^1.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "remark-gfm": "^3.0.1",
