--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -105,10 +105,11 @@ coverage
 ############################
 # Strapi
 ############################
-
 .env
 license.txt
 exports
 *.cache
 build
 .strapi-updater.json
+package-lock.json
+
